manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-listener
  labels:
    app: go-listener
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-listener
  template:
    metadata:
      labels:
        app: go-listener
    spec:
      containers:
      - name: go-listener
        image: docker.io/uhivik/go-listener:0.2
        ports:
        - containerPort: 8080
