manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-listener-svc
  labels:
    app: go-listener
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: go-listener
